--- a/public/css/style_login.1.css
+++ b/public/css/style_login.1.css
@@ -82,3 +82,27 @@ body.login .login-container {
 }
 
 
+span.invalid-feedback {
+  color: red;
+}
+
+
+
+body.login .login-container2 {
+  /* position: absolute; */
+  /* display: flex; */
+  z-index: 10;
+  width: 100%;
+  padding: 30px;
+  /* top: 25%; */
+  /* max-height: 50%; */
+  /* margin-top: -250px; */
+  align-self: center;
+}
+.btn-padd{
+  padding-left: 0px ;
+  min-height: 0px;
+}
+.red{
+  background-color: red !important;
+}
